# RESTful-API-Social-Network

./: .gitignore  README.md  alembic.ini  config.py  docker-compose.yaml  pyproject.toml
app/: Dockerfile  config.py  main.py
app/api/: dependencies..py
app/api/v1/post/: dependencies.py  endpoints.py
app/api/v1/user/: dependencies.py  endpoints.py
app/core/: schemas.py
app/core/post/: examples.py  schemas.py  store.py
app/core/user/: __init__.py  examples.py  schema.py  store.py
app/service/store/: models.py
app/service/store/sql/: __init__.py  db.py  post.py  user.py
migrations/: env.py
migrations/versions/: 356e2066f5a7_create_user.py  aeb60a7fccd1_create_posts_table.py
