[tool.poetry]
name = "restful-api-social-network"
version = "0.1.0"
description = "Simple RESTful API for a social networking application based on FastAPI"
authors = ["mark47B <windachae47@gmail.com>"]
readme = "README.md"
packages = [{include = "restful_api_social_network"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
asyncpg = "^0.28.0"
pytest-asyncio = "^0.21.1"
pytest = "^7.4.0"
alembic = "^1.11.1"
aioredis = "^2.0.1"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
sqlmodel = "^0.0.8"
psycopg2-binary = "^2.9.6"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"
black = "^23.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
